--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
 
           <div class="col-lg-4 text-center restaurant-hero-item">
-            <p class="restaurant-hero-title mb-1" data-aos="zoom-in" data-aos-delay="100">Śniadania
+            <p class="restaurant-hero-title mb-1">Śniadania
             </p>
             <p><i class="fa-solid fa-bread-slice"></i></p>
             <p class="restaurant-hero-text">Poniedziałek - Piątek 7.00 - 10.30</p>
