--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 
           <div class="col-sm-6 col-md-4 text-center facilities-hover" data-aos="zoom-in" data-aos-delay="300">
             <p><i class="fa-solid fa-square-parking"></i></p>
-            <p class="aboutus-card-title mb-1">Parkink</p>
+            <p class="aboutus-card-title mb-1">Parking</p>
             <p class="aboutus-card-text">bezpłatny parking prywatny jest dostępny na miejscu (nie jest konieczna
               rezerwacja)
             </p>
